# otus_education

./: .clang-format  .gitignore  CMakeLists.txt  README.md  version.h.in
.github/workflows/: release.yml
src/: main.cpp
src/homework_1/: homework_1.hpp  homework_1.md
src/homework_10/: BoundedBuffer.hpp  CMakeLists.txt  README.md  async.cpp  async.hpp  command.hpp  main.cpp  server.hpp  threads_observers.cpp  threads_observers.hpp
src/homework_11/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
src/homework_12/: CMakeLists.txt  main.cpp  mapreduce.cpp  mapreduce.hpp
src/homework_13/: CMakeLists.txt  accuracy_finder.cpp  accuracy_finder.hpp  classifier.cpp  classifier.hpp  main.cpp
src/homework_2/: README.md  homework_2.cpp  homework_2.hpp
src/homework_3/: allocator.hpp  homework_3.md  vector.hpp
src/homework_4/: homework_4.md  print_ip.hpp
src/homework_5/: CMakeLists.txt  graphical_document.hpp  graphical_objects.cpp  graphical_objects.hpp  homework_5.md  main.cpp  view.cpp  view.hpp  view.сpp
src/homework_6/: CMakeLists.txt  README.md  homework_6.hpp  main.cpp
src/homework_7/: CMakeLists.txt  README.md  command.cpp  command.hpp  logger.hpp  main.cpp
src/homework_8/: CMakeLists.txt  README.md  cmd_config.hpp  main.cpp  scanner.cpp  scanner.hpp
src/homework_8/resources/: test5.txt
src/homework_9/: CMakeLists.txt  LockFreeQueue.h  async.cpp  command.cpp  command.hpp  main.cpp  threads_observers.cpp
tests/: CMakeLists.txt
tests/src/: test-all.cpp
tests/src/homework_1/: test.cpp
tests/src/homework_2/: test_filter.cpp
tests/src/homework_3/: test_allocator.cpp
tests/src/homework_4/: test_print_ip.cpp
tests/src/homework_5/: test_views.cpp
